--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,6 @@
 @import 'variables.scss';
 
 body {
-    background-color: $wild-color;
-    color: $light-color;
+    background-color: $ground-color;
+    color: $map-color;
 }
