--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,5 +4,7 @@
 
 {% block body %}
     <h1>Welcome on your project 3</h1>
-    <img src="https://media.giphy.com/media/hS58Kb2OOCMPS/giphy.gif" alt="Dewey dancing">
+    <img src="https://media.giphy.com/media/hS58Kb2OOCMPS/giphy.gif" alt="Dewey dancing"></br>
+    <a href="{{ path('country') }}">All country</a></br>
+    <a href="{{ path('university') }}">All university</a>
 {% endblock %}
