--- a/templates/university/show.html.twig
+++ b/templates/university/show.html.twig
@@ -6,6 +6,7 @@
 <div class="media">
   <div class="media-body">
     <h1 class="mt-0">{{ university.name }}</h1>
+    <p> {{ university.}}
   </div>
 </div>
  
