--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,4 +3,44 @@
 body {
     background-color: $ground-color;
     color: $map-color;
+    margin: 0;
+}
+
+#mapid { 
+    height: 50vh; 
+    //border-radius: 45%;
+    margin-top: 50px;
+}
+
+#logo {
+    height: 200px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.home {
+    display: grid;
+    text-align: center;
+    font-size: 25px;
+}
+
+hr {
+    border: 3px solid rebeccapurple;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+li{
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid rebeccapurple;
+    text-align: center;
+    box-sizing: border-box;
 }
