--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -5,7 +5,9 @@
 
 <div class="media">
   <div class="media-body">
-    <h1 class="mt-0">{{ country.name }}</h1>
+    <ul>
+      <li>{{ country.name }}</li>
+    </ul>
   </div>
 </div>
  
