--- a/templates/university/index.html.twig
+++ b/templates/university/index.html.twig
@@ -17,7 +17,7 @@
     {% endfor %}    
     </ul>
     <a href="{{ path('home') }}">
-        Retour à l'accueil
+        Back to map
     </a>
 </div>
 {% endblock %}
