--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,25 +5,31 @@ body {
     color: $map-color;
     margin: 0;
 }
+.header {
+    padding: 2rem;
+    margin-bottom: 3rem;
+    border-bottom: 3px solid rebeccapurple;
+}
+.mainTitle {
+    margin: 0;
+    width: 0;
+    overflow: hidden;
+    background-image: url('/build/images/logo.52dc2bfe.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-left: 100%;
+}
 
 #mapid { 
-    height: 50vh; 
-    position: relative;
-    top: 40px;
+    min-height: 60vh; 
 }
 
 #logo {
-    height: 200px;
+    min-height: 200px;
     display: flex;
     margin-left: auto;
     margin-right: auto;
-}
-
-.home {
-    display: grid;
-    text-align: center;
-    font-size: 1.5em;
-    border-top: 3px solid rebeccapurple;
 }
 
 ul {
