fix : entity\country.php  + templates country\index.html.twig

--- a/templates/country/index.html.twig
+++ b/templates/country/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CountryController!{% endblock %}
+{% block title %}Country{% endblock %}
 
 {% block body %}
 <style>
