--- a/templates/university/show.html.twig
+++ b/templates/university/show.html.twig
@@ -1,16 +1,50 @@
 {% extends 'base.html.twig' %}
-{% block title %}University{{ university.id }}{% endblock %}
+
+{% block title %}University{% endblock %}
 
 {% block body %}
+    <h1>University</h1>
 
-<div class="media">
-  <div class="media-body">
-    <h1 class="mt-0">{{ university.name }}</h1>
-  </div>
-</div>
- 
-<a href="{{ path('university') }}">
-    Back to country list
-</a>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ university.id }}</td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td>{{ university.name }}</td>
+            </tr>
+            <tr>
+                <th>Image</th>
+                <td>{{ university.image }}</td>
+            </tr>
+            <tr>
+                <th>Street</th>
+                <td>{{ university.street }}</td>
+            </tr>
+            <tr>
+                <th>City</th>
+                <td>{{ university.city }}</td>
+            </tr>
+            <tr>
+                <th>PostalCode</th>
+                <td>{{ university.postalCode }}</td>
+            </tr>
+            <tr>
+                <th>ReferentMail</th>
+                <td>{{ university.referentMail }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ university.description }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <a href="{{ path('university_index') }}">back to list</a>
+
+    <a href="{{ path('university_edit', {'id': university.id}) }}">edit</a>
+
+    {{ include('university/_delete_form.html.twig') }}
 {% endblock %}
