feat: Create View templates for CRUD University

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,13 @@
     <header class="header">
         <h1 class="mainTitle">Neoma'round the world</h1>
     </header>
+
+    <div>
+    <a href="{{ path('country') }}">All Countries</a>
+    <a href="{{ path('university_index') }}">All Universities</a>
+        
+    
+    </div>
     
     <div id="mapid"></div>
 
