--- a/templates/university/index.html.twig
+++ b/templates/university/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}University index{% endblock %}
+{% block title %}All universities{% endblock %}
 
 {% block body %}
-    <h1>University index</h1>
+    <h1>All universities</h1>
 
     <table class="table">
         <thead>
@@ -37,11 +37,12 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="9">no records found</td>
+                <td colspan="9">No university found</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
     <a href="{{ path('university_new') }}">Create new</a>
+    <a href="{{ path('home') }}">Home</a>
 {% endblock %}
