--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,7 +7,6 @@ body {
 }
 .header {
     padding: 1rem;
-    margin-bottom: 3rem;
     border-bottom: 3px solid rebeccapurple;
 }
 .mainTitle {
@@ -15,7 +14,7 @@ body {
     width: 0;
     overflow: hidden;
     background-image: url('/build/images/logo.52dc2bfe.png');
-    background-size: cover;
+    background-size: 80%;
     background-position: center;
     background-repeat: no-repeat;
     padding-left: 100%;
@@ -23,6 +22,8 @@ body {
 
 #mapid { 
     min-height: 60vh; 
+    z-index: 2;
+    margin-top: -60%;
 }
 
 #logo {
@@ -59,7 +60,7 @@ li{
     position: fixed;
     height: 60px!important;
     overflow: hidden;
-    z-index: 10;
+    z-index: 0;
 }
 .main {
     margin: 0 auto;
@@ -82,7 +83,7 @@ li{
 }
 #sidebarMenu {
     height: 50%;
-    z-index: 99;
+    z-index: 3;
     position: relative;
     left: 0;
     width: 100%;
@@ -130,10 +131,10 @@ input[type=checkbox] {
     box-sizing: border-box;
     cursor: pointer;
     position: absolute;
-    z-index: 99;
+    z-index: 3;
     height: 100%;
     width: 100%;
-    top: 22px;
+    top: 20px;
     left: 15px;
     height: 22px;
     width: 22px;
