--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -10,7 +10,12 @@
     </ul>
   </div>
 </div>
- 
+
+<p>Average cost for food in this country is about {{ cost.food }}.</p>
+<p>Average cost for transport during the journey is about {{ cost.transport }}.</p>
+<p>Average cost for accomodation is about {{ cost.accomodation }}.</p>
+<p>Average cost for various extras is about {{ cost.extra }}.</p>
+
 <a href="{{ path('country') }}">
     Back to country list
 </a>
