--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -10,11 +10,14 @@
     </ul>
   </div>
 </div>
-
+<h1>Costs</h1>
 <p>Average cost for food in this country is about {{ cost.food }}.</p>
 <p>Average cost for transport during the journey is about {{ cost.transport }}.</p>
 <p>Average cost for accomodation is about {{ cost.accomodation }}.</p>
 <p>Average cost for various extras is about {{ cost.extra }}.</p>
+<h1>Live</h1>
+<p>{{ live.culture }}</p>
+<p>{{ live.life }}</p>
 
 <a href="{{ path('country') }}">
     Back to country list
