feat: slogan et sa mise en forme

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -23,7 +23,14 @@ body {
 #mapid { 
     min-height: 60vh; 
     z-index: 2;
-    margin-top: -60%;
+    margin-top: -70%;
+}
+
+.slogan{
+    color: #4D267F;
+    position: absolute;
+    top: 20%;
+    left: 17%;
 }
 
 #logo {
