--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <header class="header">
         <h1 class="mainTitle">Neoma'round the world</h1>
+        <p class="slogan">Grow up and live new experiences</p>
     </header>
 
     <div class="burger"></div>
