--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -18,6 +18,9 @@
 <h1>Live</h1>
 <p>{{ live.culture }}</p>
 <p>{{ live.life }}</p>
+<h1>Opinion</h1>
+<p>{{ opinion.advice }}</p>
+<p><a href="{{ opinion.interview }}" target="_blank">Interview</a></p>
 
 <a href="{{ path('country') }}">
     Back to country list
