--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -11,10 +11,11 @@
   </div>
 </div>
 <h1>Costs</h1>
-<p>Average cost for food in this country is about {{ cost.food }}.</p>
-<p>Average cost for transport during the journey is about {{ cost.transport }}.</p>
-<p>Average cost for accomodation is about {{ cost.accomodation }}.</p>
-<p>Average cost for various extras is about {{ cost.extra }}.</p>
+<p>Average cost in this country for:</p>
+<p>Food is around {{ cost.food }}.</p>
+<p>Transport during your stay will be {{ cost.transport }}.</p>
+<p>Accomodation can be like {{ cost.accomodation }}.</p>
+<p>Various extras like sport practice, social activities, etc... is most around {{ cost.extra }}.</p>
 <h1>Live</h1>
 <p>{{ live.culture }}</p>
 <p>{{ live.life }}</p>
