Fix: CSS homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,9 +15,8 @@
     </label>
     <div id="sidebarMenu">
       <ul class="sidebarMenuInner">
-        <li><a href="https://vanila.io" target="_blank">Home</a></li>
-        <li><a href="https://instagram.com/plavookac" target="_blank">Country</a></li>
-        <li><a href="https://twitter.com/plavookac" target="_blank">University</a></li>
+        <li><a href="{{ path('home') }}" target="_blank">Home</a></li>
+        <li><a href="{{ path('country') }}" target="_blank">Country</a></li>
         <li><a href="https://neoma-bs.fr/" target="_blank">Neoma BS</a></li>
       </ul>
     </div>
