feat: Insert image into country/show.html.twig

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -193,3 +193,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     margin-top: -9px;
 }
 // fin menu burger
+.germany{
+    position: relative;
+    left:8%;
+}
