--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,8 +15,8 @@
     </label>
     <div id="sidebarMenu">
       <ul class="sidebarMenuInner">
-        <li><a href="{{ path('home') }}" target="_blank">Home</a></li>
-        <li><a href="{{ path('country') }}" target="_blank">Country</a></li>
+        <li><a href="{{ path('home') }}">Home</a></li>
+        <li><a href="{{ path('country') }}">Country</a></li>
         <li><a href="https://neoma-bs.fr/" target="_blank">Neoma BS</a></li>
       </ul>
     </div>
