--- a/templates/country/index.html.twig
+++ b/templates/country/index.html.twig
@@ -4,20 +4,23 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 62%; font: 18px/1.5 sans-serif;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+
 </style>
 
 <div class="example-wrapper">
     <h1>All Countries</h1>
+</div>
 
     <ul>
     {% for country in countries %}
-        <li><a href="{{ path("country_show", { id: country.id }) }}"> {{ country.name }}</li>
+        <li><a id="country" href="{{ path("country_show", { id: country.id }) }}"> {{ country.name }}</li>
     {% endfor %}    
     </ul>
+   
     <a href="{{ path('home') }}">
         Back to map
     </a>
-</div>
+
 {% endblock %}
