--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -39,7 +39,7 @@
                 radius: 3000
                 }).addTo(map);
         
-                marker.bindPopup("<b>NEOMA BS Reims</b><br>Welcome to NEOMA BS!").openPopup();
+                marker.bindPopup("<b>NEOMA BS Reims</b><br>Welcome to <b><a href=https://neoma-bs.fr/>Neoma BS!</a></b>").openPopup();
         
                 circle.bindPopup("Welcome to Reims city");
         </script>
