fix : create new marker and popup in homepage

--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Country{{ country.id }}{% endblock %}
+{% block title %}{{ country.name }}{% endblock %}
 
 {% block body %}
 <style>
