--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,8 @@
             {% endif %}</li>
       </ul>
     </div>
-    
+    <button class="login"><a href ="{{path('app_login')}}"><img class="avatar" src="/build/images/login.1cdcfe7a.png"</a></button>
+
     <div id="mapid"></div>
 
     <script>
