--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,7 +29,7 @@ body {
 #mapid { 
     min-height: 60vh; 
     z-index: 2;
-    margin-top: -45%;
+    margin-top: -50%;
 }
 
 .slogan{
@@ -218,4 +218,14 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 .login{
     text-align: center;
+}
+a {
+    text-decoration: none;
+    font-size: 1em;
+}
+.media-body{
+    font-size:2em;
+}
+.button{
+    font-size:1.5em;
 }
