fixed homepage CSS

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,7 @@ body {
     background-color: $ground-color;
     color:$map-color;
     margin: 0;
+    font-family: 'Minion Pro', sans-serif;
 }
 .header {
     padding: 1rem;
