--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 </head>
 <body>
-
+<a href="{{path('home')}}"><h1 class="mainTitle">Neoma'round the world</h1></a>
 {% block body %}{% endblock %}
 
 {% block javascripts %}
