mise en forme de la page register et lien avec la page login

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,14 +7,14 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
+<form class="register_form">
     <h1>Register</h1>
-
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-
+</form>
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
