--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -51,7 +51,28 @@ form>input{
 form>button{
     margin-left: 39%;
 }
+.registration{
+    margin-left: 5rem;
+    margin-top: 5rem;
+}
 // Fin Formulaire Login
+
+// Début formulaire Register
+.register_form>h1{
+    margin-top: 30%;
+    margin-bottom: 5%;
+    text-align: center;
+}
+input{
+    display: grid;
+    margin: auto;
+    margin-bottom: 5%;
+}
+.btn{
+    margin-left: 39%;
+    margin-top: 1rem;
+}
+// Fin formulaire Register
 
 .slogan{
     color: #4D267F;
