--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -30,6 +30,10 @@
     <p>{{ live.culture }}</p>
     <p>{{ live.life }}</p>
 
+  <h1>Opinions</h1>
+
+    <p>{{ opinion.advice }}</p>
+    <p>{{ opinion.interview }}</p>
   
   <button class="button"><a href="{{ path('home') }}">Back home</a></button>
     
