fix: update showcountry css

--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<img class="germany" src="{{ country.image }}">
+<img class="country_image" src="{{ country.image }}">
 <div class="example-wrapper">
   <h1>Costs</h1>
     <p>Average cost in this country for:</p>
