feat: add cost, live and opinions templates

--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -19,21 +19,24 @@
 
 <img class="country_image" src="{{ country.image }}">
 <div class="example-wrapper">
-  <h1>Costs</h1>
+  {# <h1>Costs</h1>
     <p>Average cost in this country for:</p>
     <p>Food is around {{ cost.food }} €.</p>
     <p>Transport during your stay will be {{ cost.transport }} €.</p>
     <p>Accomodation can be like {{ cost.accomodation }} €.</p>
-    <p>Various extras like sport practice, social activities, etc... is most around {{ cost.extra }} €.</p>
+    <p>Various extras like sport practice, social activities, etc... is most around {{ cost.extra }} €.</p> #}
+<a href="{{ path("cost_show", { id: country.id }) }}">Cost </a>
+<a href="{{ path("live_show", { id: country.id }) }}">Live </a>
+<a href="{{ path("opinions_show", { id: country.id }) }}">Opinions </a>
 
-  <h1>Live</h1>
+  {# <h1>Live</h1>
     <p>{{ live.culture }}</p>
     <p>{{ live.life }}</p>
 
   <h1>Opinions</h1>
 
     <p>{{ opinion.advice }}</p>
-    <p>{{ opinion.interview }}</p>
+    <p>{{ opinion.interview }}</p> #}
   
   <button class="button"><a href="{{ path('home') }}">Back home</a></button>
     
