--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -256,7 +256,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 // fin menu burger
 .country_image{
     width: 100%;
-    height:50vh;
+    height:55vh;
 }
 .login{
     text-align: center;
@@ -271,3 +271,24 @@ a {
 .button{
     font-size:1.5em;
 }
+
+//bottom bar//
+
+.bottombar {
+    display: flex;
+    justify-content: center;
+    background-color: #4D267F;  
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+  
+.iconbar a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
