--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -28,9 +28,9 @@ body {
 
 }
 #mapid { 
-    min-height: 60vh; 
+    min-height: 70vh; 
     z-index: 2;
-    margin-top: -60%;
+    margin-top: -70%;
 }
 
 // Début Formulaire Login
@@ -108,15 +108,10 @@ ul{
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 li{
-    margin: 1rem;
-    padding: 2rem;
-    border: 1px solid rebeccapurple;
+    margin: 2rem;
+    padding: 1.5rem;
     text-align: center;
     box-sizing: border-box;
-    border-radius: 5px;
-    background-color:#4D267F;
-    color: white;
-    box-shadow:10px 5px 5px grey;
 }
 .burger {
     display: block;
@@ -277,7 +272,7 @@ a {
 .bottombar {
     display: flex;
     justify-content: center;
-    background-color: #4D267F;  
+    background-color: #4d267f;  
     position: fixed;
     bottom: 0;
     width: 100%;
