--- a/templates/opinions/new.html.twig
+++ b/templates/opinions/new.html.twig
@@ -10,5 +10,5 @@
     <input type='submit' value='Add my opinion'>
     {{ form_end(form) }}
 
-    <a href="{{ path('opinion_index') }}">Back to all opinions</a>
+    <a href="{{ path('opinion_show') }}">Back to all opinions</a>
 {% endblock %}
