fix : correction CSS

--- a/templates/live/show.html.twig
+++ b/templates/live/show.html.twig
@@ -4,7 +4,9 @@
 
 <div class="live">
 <h1>Life</h1>
+    <h2>Culture</h2>
     <p>{{ live.culture }}</p>
+    <h2>Live</h2>
     <p>{{ live.life }}</p>
 </div>
 {% endblock %}
