feat : création page 'cost' et mise en forme

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -292,3 +292,10 @@ a {
 .live{
     text-align: center;
 }
+// fin live_show
+
+// Début cost_show
+.cost{
+    text-align: center;
+}
+// fin cost show
