feat : Création de la page 'opinion' et mise en forme

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -299,3 +299,9 @@ a {
     text-align: center;
 }
 // fin cost show
+
+// début opinion_show
+.opinion{
+    text-align: center;
+}
+// fin opinion_show
