--- a/templates/opinions/show.html.twig
+++ b/templates/opinions/show.html.twig
@@ -1,19 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<style>
 
-</style>
+<div class="opinion">
+<h1>Opinions</h1>
 
-  {# <h1>Live</h1>
-    <p>{{ live.culture }}</p>
-    <p>{{ live.life }}</p>
-
-  <h1>Opinions</h1>
-
-    <p>{{ opinion.advice }}</p>
-    <p>{{ opinion.interview }}</p> #}
-  
-  {# <button class="button"><a href="{{ path('home') }}">Back home</a></button> #}
-    
+    <p>{{ opinions.advice }}</p>
+    <h2>Interviews</h2>
+    <p>{{ opinions.interview }}</p> 
+</div>    
 {% endblock %}
