--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -24,9 +24,9 @@
     <p>Various extras like sport practice, social activities, etc... is most around {{ cost.extra }} €.</p> #}
 	<nav class="bottombar">
   <div class="iconbar">
-		<a href="{{ path("cost_show", { id: country.id }) }}">Cost </a>
-		<a href="{{ path("live_show", { id: country.id }) }}">Live </a>
-		<a href="{{ path("opinions_show", { id: country.id }) }}">Opinions </a>
+    <a href="{{ path("cost_show", { id: country.id }) }}"><img src="{{ asset('build/images/cost.png') }}" alt=""></a>
+    <a href="{{ path("live_show", { id: country.id }) }}"><img src="{{ asset('build/images/live.png') }}" alt=""></a>
+    <a href="{{ path("opinions_show", { id: country.id }) }}"><img src="{{ asset('build/images/opinions.png') }}" alt=""></a>
   </div>
 	</nav>
 
