added some pictures in templates

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -309,3 +309,9 @@ a {
     text-align: center;
 }
 // fin opinion_show
+
+// pictures on templates
+.template_image{
+    width: 100%;
+    height: 50%;
+}
