--- a/templates/live/show.html.twig
+++ b/templates/live/show.html.twig
@@ -5,8 +5,10 @@
 <div class="live">
 <h1>Life</h1>
     <h2>Culture</h2>
+    <img class="template_image" type="image/png" src="{{ asset('build/images/live_culture.png') }}" />
     <p>{{ live.culture }}</p>
     <h2>Live</h2>
+    <img class="template_image" type="image/png" src="{{ asset('build/images/live_life.png') }}" />
     <p>{{ live.life }}</p>
 </div>
 {% endblock %}
