fix: Add image in popup

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -309,3 +309,9 @@ a {
     text-align: center;
 }
 // fin opinion_show
+// popup //
+.image_popup{
+    width:50vw;
+    height:20vh;
+}
+// fin-Popup //
