--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,54 +1,44 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <header class="header">
         <p class="slogan">Grow up and live new experiences</p>
-    </header>
 
-    <div class="burger"></div>
-    <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-    <label for="openSidebarMenu" class="sidebarIconToggle">
-      <div class="spinner diagonal part-1"></div>
-      <div class="spinner horizontal"></div>
-      <div class="spinner diagonal part-2"></div>
-    </label>
-    <div id="sidebarMenu">
-      <ul class="sidebarMenuInner">
-        <li><a href="{{ path('home') }}">Home</a></li>
+        {# <li><a href="{{ path('home') }}">Home</a></li>
         <li><a href="https://neoma-bs.fr/" target="_blank">Neoma BS</a></li>
         <li>{% if app.user %}
                  {{ app.user.email }}
                  <a href="{{ path('app_logout') }}"> Logout</a>
             {% else %}
                 <a href="{{ path('app_login') }}"> Login</a>
-            {% endif %}</li>
-      </ul>
-    </div>
-    <button class="login"><a href ="{{path('app_login')}}"><img class="avatar" src="/build/images/login.1cdcfe7a.png"></a></button>
+            {% endif %}</li> #}
+      
+    
+    <a href="{{path('app_login')}}"><img class="avatar" src="{{ asset('build/images/login.png') }}" alt=""></a>
 
     <div id="mapid"></div>
-
     <script>
-        L.mapbox.accessToken = 'pk.eyJ1IjoiYWRlbGluZWI1MSIsImEiOiJja2loOWdlcmswNWNnMnptd2Jvb3l6MDA3In0.XbM3nj9P9Gd0daPf7tt4sg';
+        L.mapbox.accessToken = 'pk.eyJ1IjoibWFzc2JzcXRzIiwiYSI6ImNraWlyNGJhaDFmc3oyeXF1ajhua252MzUifQ.YPSJsoDm30aRVc6yxYUW8A';
         var map = L.mapbox.map('mapid')
             .setView([29.400000, 15.678929], 2.61);
         
-        L.mapbox.styleLayer('mapbox://styles/adelineb51/ckihb8xxq6djh19pmrtegcu7o').addTo(map);
+        L.mapbox.styleLayer('mapbox://styles/massbsqts/ckk6o02eg0vvo17pna2aqgxmc').addTo(map);
         
         {% for country in countries %}
-            const country{{ country.id }} = L.marker([ {{country.latitude}},{{country.longitude}}])
+            const country{{ country.id }} = L.circle([ {{country.latitude}},{{country.longitude}}], 125000,
+            { color: '#a8a099'
+            })
                 .bindPopup("<b><a href=country/{{ country.id }}/>{{ country.name }}</a></b>")
                 .addTo(map);
         {% endfor %}
         {% for university in universities %}
-            const university{{ university.id }} = L.circle([ {{university.latitude}},{{university.longitude}}],10000, 
+            const university{{ university.id }} = L.circle([ {{university.latitude}},{{university.longitude}}],1000, 
                                                   { color:'red',
                                                     fillColor: '#f03',
                                                     fillOpacity: 0.5 })
                 .bindPopup("<b><a href=university/{{ university.id}}/>{{ university.name }}</a></b>")
                 .addTo(map);
         {% endfor %}
-        </script>
+    </script>
 
 
 {% endblock %}
