--- a/templates/opinion/show.html.twig
+++ b/templates/opinion/show.html.twig
@@ -4,9 +4,11 @@
 
 <div class="opinion">
 <h1>Opinions</h1>
-
+    <h2>All the advices</h2>
+    <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_advice.png') }}" />
     <p>{{ opinions.advice }}</p>
-    <h2>Interviews</h2>
+    <h2>All the interviews</h2>
+    <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_interview.png') }}" />
     <p>{{ opinions.interview }}</p> 
 </div>    
 {% endblock %}
