--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,9 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<body onload="window.location.href = '#openModal';">
     <header class="header">
         <p class="slogan">Grow up and live new experiences</p>
     </header>
+
+    <div id="openModal" class="modalDialog">
+        <div>
+            <h3>Cette application dispose de CGU</h3>
+            <p>Pour poursuivre sur cette application, veuillez accepter les conditions générales d'utilisation</p>
+            <a href="" class="close" >Voir plus</a>
+            <a href="#close" title="Close" class="close">J'accepte les CGU</a>
+        </div>
+    </div>
 
     <div class="burger"></div>
     <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
@@ -49,4 +59,5 @@
                 .addTo(map);
         {% endfor %}
         </script>
+</body>
 {% endblock %}
