feat: create modal for CGU in homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,10 +8,10 @@
 
     <div id="openModal" class="modalDialog">
         <div>
-            <h3>Cette application dispose de CGU</h3>
-            <p>Pour poursuivre sur cette application, veuillez accepter les conditions générales d'utilisation</p>
-            <a href="" class="close" >Voir plus</a>
-            <a href="#close" title="Close" class="close">J'accepte les CGU</a>
+            <h3>This application has TCU</h3>
+            <p>To continue on this application, please accept the terms and conditions of use.</p>
+            <a href="" class="close" >See more</a>
+            <a href="#close" title="Close" class="close">I accept the TCU</a>
         </div>
     </div>
 
