feat: controller cgu , template for cgu

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
         <div>
             <h3>This application has TCU</h3>
             <p>To continue on this application, please accept the terms and conditions of use.</p>
-            <a href="" class="close" >See more</a>
+            <a href="{{ path ('cgu')}}" class="close" >See more</a>
             <a href="#close" title="Close" class="close">I accept the TCU</a>
         </div>
     </div>
